...
        android:layout_width="67dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="52dp"
        android:layout_weight="1"
        android:backgroundTint="@color/purpleText"
        android:text="OK"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@+id/search_bar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_event_name"
...
