...
                    android:text="View QR Code"
                    android:backgroundTint="@color/purpleText"
                    android:textColor="@color/black"
                    android:layout_marginBottom="8dp" />

                <Button
                    android:id="@+id/btn_waiting_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Join Waiting List"
                    android:backgroundTint="@color/purpleText"
                    android:textColor="@color/black"
                    android:layout_marginBottom="8dp" />
...
